# zero-sense

./: .env.example  Makefile  README.md  SECURITY.md  deploy.sh  requirements.txt  run_tests.sh
api/: main.py
api/agents/: guardian.py
api/stellar/: client.py
circuits/: fedavg_aggregation.circom
contracts/bn254_verifier/: Cargo.toml
contracts/bn254_verifier/src/: lib.rs
contracts/bn254_verifier/tests/: gnark.rs
contracts/bn254_verifier/tests/common/: mod.rs
contracts/carbon_credit/: Cargo.toml
contracts/consensus/: Cargo.toml
contracts/consensus/src/: lib.rs
contracts/custody_handoff/: Cargo.toml
contracts/dp_gate/: Cargo.toml
contracts/dp_gate/src/: lib.rs
contracts/fleet_identity/: Cargo.toml
contracts/fleet_identity/src/: lib.rs  test.rs
contracts/fleet_learning/: Cargo.toml
contracts/fleet_learning/src/: lib.rs  test.rs
contracts/hardware_attestation/: Cargo.toml
contracts/hardware_attestation/src/: lib.rs
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs
contracts/model_provenance/: Cargo.toml
contracts/payment/: Cargo.toml
contracts/payment/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
frontend/: app.js  dashboard.html  index.html  styles.css
model/: inference.py
simulation/: robot_sim.py
tests/: __init__.py  test_api.py  test_guardian.py  test_inference.py  test_simulation.py  test_stellar_client.py
zkvm/guest/: Cargo.toml
zkvm/guest/src/: main.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
