[package]
name = "bn254_verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.0.0"

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
ark-bn254 = "0.6"
ark-ff = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
