[package]
name = "fleet_learning"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
# Needs native BN254 (public-signal conversion for the cross-contract
# verify_proof call) and native Poseidon (on-chain commitments-root fold),
# both behind the `hazmat-crypto` feature, same as fleet_identity.
soroban-sdk = { version = "26.0.0", features = ["hazmat-crypto"] }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon" }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["hazmat-crypto", "testutils"] }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
