[package]
name = "zerosense-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zerosense-guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
