[package]
name = "zerosense-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
hex = "0.4"
